qas-source/admin/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: adminmutosi-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30639
  selector:
    app: adminmutosi
