qas-source/admin/1.pv_pvc_admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminmutosi-qas
  namespace: dev-qas
spec:
  replicas: 5
  selector:
    matchLabels:
      app: adminmutosi-qas
  template:
    metadata:
      labels:
        app: adminmutosi-qas
    spec:
      volumes:
        - name: pv-ad-nfs-qas
          persistentVolumeClaim:
            claimName: pvc-ad-nfs-qas
      containers:
        - name: adminmutosi-qas
          image: registry.mutosi.com/admin:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: pv-ad-nfs-qas
      imagePullSecrets:
        - name: credentials-registry-qas
      nodeSelector:
        magnum.openstack.org/nodegroup: qas
---
apiVersion: v1
kind: Service
metadata:
  name: adminmutosi-service-qas
  namespace: dev-qas
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31639
  selector:
    app: adminmutosi-qas
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adminmutosi-qas
  namespace: dev-qas
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
      #alb.ingress.kubernetes.io/scheme: internet-facing

     # SSL Settings
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
      #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:829949757905:certificate/1a9b8917-92d1-4e41-9adb-c28eae6146a9
      #ingress.kubernetes.io/ssl-redirect: "true"

    # Group settings
    #alb.ingress.kubernetes.io/group.name: mutosi-omni
spec:
  tls:
    - hosts:
      - qas-admin-omni.mutosi.com
      secretName: mts-cert-qas
  rules:
  - host: qas-admin-omni.mutosi.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: adminmutosi-service-qas
            port:
              number: 80
